Revise the word and color

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <option>CONSERVATIONANDWORKINGLANDSCAPES_Warrentonv3_26March2019</option>
         <option>PlanningToolsAssessment2019</option>
       </select>
-      <input id="q" onkeypress="return search()" onchange="search()" placeholder="search text">
+      <input id="q" onkeypress="return search()" onchange="search()" placeholder="search text" class="input_search">
     </div>
     <form  class="for_stop_word"  onclick="check_stop_word()" >
       <input type="radio" name="sw" id="s_close"  checked="true" class="stop_word" >
