Suitable for phone.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="libs/v6.1.1-dist/ol.css">
     <link rel="stylesheet" href="https://unpkg.com/aos/dist/aos.css"/>
+    <meta name="viewport" content="height=device-height,width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,minimal-ui">
   </head>
   <body>
     <div class = "top_box">
