revise the recursion Bug

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div id="popup-content"></div>
     </div>
 
-    <div id="chart"></div>
+    <div><div id="chart"></div></div>
     <div class="question_option">
       <label for="Domain">Choose Model to</label>
       <select id="Domain"  onchange="load_visualize()">
